# Wildfire-Prediction-Model

./: MATH244_final.ipynb  README.md  pyproject.toml
data/: README.md  wildfires_2025.csv  wildfires_clean2025.csv  wildfires_clean2025_py.csv  wildfires_regions2024.csv
presentation/: .gitignore  README.md  finalprez.qmd  presentation.qmd  prez.qmd  pyproject.toml
scripts/: MATH244_final.ipynb  README.md  clean_data.ipynb  clustering.ipynb  eda.ipynb  environment.yml  finalproject.qmd
website/: website.qmd
