[project]
name = "wildfire-analysis"
version = "0.1.0"
description = "Analysis of 2024 Wildfire Dataset from Kaggle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
]
